# database-assessment

./: .bumpversion.cfg  .dockerignore  .editorconfig  .env.example  .flake8  .geminiignore  .gitignore  .pre-commit-config.yaml  .prettierrc.json  .pylintrc  404.html  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE.txt  Makefile  README.md  README_ORIGINAL.md  SINGLE-FILE.md  TODO.md  api-requirements.txt  astro.config.mjs  build-requirements.txt  cloudbuild.yaml  components.json  docker-compose.override.yml  docker-compose.yml  index.html  manage.py  manifest  mkdocs.yml  mypy.ini  package-lock.json  package.json  pyproject.toml  readiness-check.md  requirements-docs.txt  requirements.txt  (+11 more)
.astro/: types.d.ts
.gemini/: GEMINI.md
.gemini/commands/: dma:implement.toml  dma:prd.toml  dma:review.toml  dma:sync-guides.toml  dma:test.toml  implement.toml  prd.toml  review.toml  sync-guides.toml  test.toml
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug report.yaml  document.yaml  enhancement request.yaml  new feature.yaml
.github/workflows/: ci.yaml  docs.yaml  release.yaml  test.yaml
code_of_conduct/: index.html
contributing/: index.html
db-assessment/: import_db_assessment.py  optimusprime.py  requirements.txt  rules_engine.py  set_client_info.py  transformers.json  version.py
db-assessment/dbSQLCollector/: minimum_select_grants_for_targets.sql  oracle_db_assessment.sql  oracle_db_assessment_11g.sql
db-assessment/opConfig/: optconfig__optimusconfig_network_to_gcp__.csv  transformers.json
db-assessment/opViews/: optimus_createView01__vconfig_machinesizes.sql  optimus_createView01__vdbfeatures_inuse.sql  optimus_createView01__vinstsummary.sql  optimus_createView01__vosstat.sql  optimus_createView01__vsysmetric_hist.sql  optimus_createView02__vconfig_networktogcp.sql  optimus_createView02__vdbmemory_usageperhost.sql  optimus_createView02__vdbmemory_usageperpdb.sql  optimus_createView02__vosstat_metrics.sql  optimus_createView02__vsysmetric_histperhost.sql  optimus_createView03__vdbsummary.sql  optimus_createView03__vosstat_metrics_summary.sql  optimus_createView04__vdbfact.sql  optimus_createView04__vdbparameters.sql  optimus_createView04__vmigration_technique.sql  optimus_createView05__vbms_sizing_detailperpdb.sql  optimus_createView06__vbms_sizing_detailperdb.sql  optimus_createView06__vbms_sizing_detailperhost.sql  optimus_createView06__vbms_sizing_summperpdb.sql  optimus_createView07__vbms_sizing_bmsserverperpdb.sql  optimus_createView07__vbms_sizing_summperdb.sql  optimus_createView07__vbms_sizing_summperhost.sql  optimus_createView08__vbms_sizing_bmsserverperdb.sql  optimus_createView08__vbms_sizing_bmsserverperhost.sql  optimus_createView09__vbms_sizing_report.sql  optimus_createView09__vmigration_calculator.sql  optimus_createView09__vpsodbmig_calculator_inputs.sql
dbCollector/: minimum_select_grants_for_targets.sql  oracle_db_assessment.sql
dbSQLCollector/: afiedt.buf  minimum_select_grants_for_targets.sql  oracle_db_assessment.sql  oracle_db_assessment_11g.sql
db_assessment/: 0_configure_op_env.sh  1_activate_op.sh  2_load_op.sh  3_run_op_etl.sh  4_gen_op_report_url.sh  api.py  import_db_assessment.py  local_function_runner.py  op_etl_template.sql  optimusprime.py  remote.py  rules_engine.py  set_client_info.py  version.py
db_assessment/dbSQLCollector/: assessment_wrapper.sql  assessment_wrapper_new.sql  collectData-Step1.sh  grants_wrapper.sql  minimum_select_grants_for_targets.sql  minimum_select_grants_for_targets_12c_AND_ABOVE.sql  minimum_select_grants_for_targets_ONLY_FOR_11g.sql  op_collect.sql  op_collect_db_info.sql  op_collect_init.sql  oracle_db_assessment.sql  oracle_db_assessment_11g.sql  oracle_db_assessment_12c_AND_ABOVE.sql  oracle_db_assessment_ONLY_FOR_11g.sql
db_assessment/opConfig/: optconfig__optimusconfig_bms_machinesizes__.csv  optprimeConfig__tableSchemas.json  (+1 more)
deploy/: Cloudbuild.dockerfile
docs/: authors.md  changelog.md  code_of_conduct.md  conf.py  contributing.md  index.md  license.md
notebooks/: op-analysis.ipynb  sql-analysis.ipynb  template.ipynb
opConfig/: optconfig__optimusconfig_bms_machinesizes__.csv  optconfig__optimusconfig_network_to_gcp__.csv
opViews/: optimus_createView01__vdbfeatures_inuse.sql  optimus_createView02__vdbmemory_usageperhost.sql  optimus_createView04__vmigration_technique.sql  optimus_createView06__vbms_sizing_detailperdb.sql  optimus_createView06__vbms_sizing_summperpdb.sql  optimus_createView07__vbms_sizing_bmsserverperpdb.sql  optimus_createView07__vbms_sizing_summperdb.sql  optimus_createView09__vbms_sizing_report.sql
oracle_db_assessment.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
report/: report.sql
requirements/: base.in  base.txt  dev.in  dev.txt  lint.in  lint.txt  requirements-dev.txt  requirements-docs.txt  requirements-test.py3.10.txt  requirements-test.py3.11.txt  requirements-test.py3.12.txt  requirements-test.py3.8.txt  requirements-test.py3.9.txt  requirements-test.txt  requirements.txt
resources/: App.tsx  index.html  main.tsx
scripts/: 0_configure_op_env.sh  1_activate_op.sh  2_load_op.sh  3_run_op_etl.sh  4_gen_op_report_url.sh  _configure_op_env.sh  build-binary-package.sh  build-scripts.sh  collectData-Step1.sh  install-or-upgrade.sh  install_purge_proc.sh  intall-hatch.sh  op_etl_template.sql  post-build.py  post_build.py  pre_build.py  process-collection.sh  purge_collection.sql  purge_host.sql
search/: search_index.json
specs/: AGENTS.md  README.md
tests/: __init__.py  conftest.py  database.py  docker-compose.yml  docker_service_fixtures.py  helpers.py  test_bundle_python.py
tools/: 3_run_op_etl.sh  __init__.py  _script_bootstrap.sh  build-binary-package.sh  build-collector.sh  bundle_python.py  collectData-Step1.sh  format-source.sh  install-hatch.sh  install-or-upgrade.sh  install-poetry.sh  poetry-invoke-plugin.py  requirements-debian-x86.sh  requirements-osx.sh  setup-local-env.sh  tasks.py
vite-project/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+1060 files in other folders)
