[project]
authors = [{ name = "Cody Fincher", email = "codyfincher@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development",
  "Typing :: Typed",
]
dependencies = [
    "duckdb>=0.9.2",
    "aiosql",
    "click",
    "rich-click",
    "jinja2>=3.1.3",
]
description = "Database Migration Assessment."
keywords = ["database", "migration", "dma"]
license = { text = "MIT" }
name = "dma"
readme = "README.md"
requires-python = ">=3.8"
version = "5.0.0"

[project.scripts]
dma = "dma.__main__:run_cli"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "nodeenv"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs = ["src/"]
exclude = ["resources/", "tests", "docs/", "scripts/"]
include = ["src/dma/templates/**/*"]
packages = ["src/dma"]

[tool.pdm.scripts]
lint = "pdm run pre-commit run --all-files"
post_install = "pdm run python scripts/pre-build.py --install-packages"
pre_build = "pdm run python scripts/pre-build.py --build-assets"
start-infra = "docker-compose -f docker-compose.yml up --force-recreate -d"
stop-infra = "docker-compose -f docker-compose.yml down --remove-orphans"
test = "pdm run pytest tests"
test_coverage = { composite = ["pdm run pytest tests", "pdm run coverage html", "pdm run coverage xml"] }

[tool.pdm.dev-dependencies]
dev = ["nodeenv", "bump2version"]
docs = ['mkdocs', 'mkdocs-material', 'mkdocstrings', 'mkdocstrings-python']
linting = ["pre-commit", "mypy", "ruff", "types-click", "types-pyyaml", "pylint", "sqlfluff"]
test = ["pytest", "pytest-mock", "pytest-cov", "coverage"]

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 120

[tool.coverage.report]
exclude_lines = [
  'if TYPE_CHECKING:',
  'pragma: no cover',
  "if __name__ == .__main__.:",
  'def __repr__',
  'if self\.debug:',
  'if settings\.DEBUG',
  'raise AssertionError',
  'raise NotImplementedError',
  'if 0:',
  'class .*\bProtocol\):',
  '@(abc\.)?abstractmethod',
]
omit = ["*/tests/*"]
show_missing = true

[tool.coverage.run]
branch = true
omit = ["tests/*", "scripts/*"]

[tool.pytest.ini_options]
addopts = ["-ra"]
env_files = [".env.testing"]
env_override_existing_values = 1
filterwarnings = ["ignore::DeprecationWarning:pkg_resources"]
testpaths = ["tests"]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  '__pycache__',
]
fix = true
ignore = [
  "E501",    # pycodestyle line too long, handled by black
  "D100",    # pydocstyle - missing docstring in public module
  "D101",    # pydocstyle - missing docstring in public class
  "D102",    # pydocstyle - missing docstring in public method
  "D103",    # pydocstyle - missing docstring in public function
  "D104",    # pydocstyle - missing docstring in public package
  "D105",    # pydocstyle - missing docstring in magic method
  "D106",    # pydocstyle - missing docstring in public nested class
  "D107",    # pydocstyle - missing docstring in __init__
  "D202",    # pydocstyle - no blank lines allowed after function docstring
  "D205",    # pydocstyle - 1 blank line required between summary line and description
  "D415",    # pydocstyle - first line should end with a period, question mark, or exclamation point
  "UP037",   # pyupgrade - removes quotes from type annotation
  "A003",    # flake8-builtins - class attribute {name} is shadowing a python builtin
  "B010",    # flake8-bugbear - do not call setattr with a constant attribute value
  "B008",    #  flake8-bugbear - Do not perform function call `Parameter` in argument defaultsRuff(B008)
  "RUF012",  # ruff - mutable class attributes should be annotated with `typing.ClassVar`
  "ANN401",  # ruff - Dynamically typed expressions (typing.Any) are disallowed
  "ANN102",
  "ANN101",  # ruff - Missing type annotation for `self` in method
  "PLR0913", # ruff - Too many arguments to function call
  "PLR2004", # Magic value used in comparison
  "FBT001",  # Boolean typed positional argument in function definition
  "FBT002",  # Boolean default positional argument in function definition
  "FBT003",  # Boolean Boolean default positional argument in function definition
  "ARG002",  # Unused method argument
  "ARG001",  #  Unused function argument
  "TD002",
  "TD003",
  "FIX002",
  "PGH003",
  "RUF006",
  "SLF001",
  "PT007",
  'PT004',
  'PT005',
  'S603',
  "E501",    # pycodestyle line too long, handled by black
  "PLW2901", # pylint - for loop variable overwritten by assignment target
  "ANN401",
  "ANN102",
  "ANN101",
  "FBT",
  "PLR0913", # too many arguments
  "PT",
  "TD",
  "PERF203", # ignore for now; investigate
]
line-length = 120
select = ["ALL"]
unsafe-fixes = true
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
src = ["src", "tests/"]
target-version = "py38"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
max-complexity = 12

[tool.ruff.pep8-naming]
classmethod-decorators = [
  "classmethod",
  "pydantic.validator",
  "pydantic.root_validator",
  "pydantic.field_validator",
  "sqlalchemy.ext.declarative.declared_attr",
  "sqlalchemy.orm.declared_attr.directive",
  "sqlalchemy.orm.declared_attr",
]


[tool.ruff.isort]
known-first-party = ['tests', 'dma', 'scripts']

[tool.ruff.per-file-ignores]
"__init__.py" = ['F401', 'D104']
"scripts/*.py" = ["INP001"]
"tests/*.py" = ['D103', 'S101', 'D104']

[tool.slotscheck]
strict-imports = false

[tool.codespell]
ignore-words-list = "alog"
skip = 'pdm.lock, package-lock.json'

[tool.mypy]
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = '''(?x)(
^build/
|^dist/
|^.venv/
|^node_modules/
|^migrations/
)
'''
implicit_reexport = false
plugins = []
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
disallow_untyped_decorators = false
module = ["tests.*"]


[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "aiohttp.*",
  "fsspec.*",
  "gcsfs.*",
  "google.auth",
  "google.cloud.*",
  "google.protobuf.*",
  "jsbeautifier",
  "jsbeautifier.*",
  "pyarrow.*",
  "re2.*",
  "saq.*",
  "sqlalchemy.*",
  "uvicorn.*",
  "googleapiclient",
  "googleapiclient.*",
  "uvloop.*",
  "uvloop.*",
]

[[tool.mypy.overrides]]
ignore_errors = true
module = [
  "dma.db.migrations.*",
  "dma.lib.dto.*",
  "pyspark.sql.connect.proto",
  "pyspark.sql.connect.proto.*",
  "scripts.*",
]

[tool.pyright]
include = ["src/dma", "tests"]
